Pascal/test/cohadar/pascal/errors/bad_operands_comparison.pas
program test;
var b: boolean;
begin
	b := 2 > b;
end.